--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <img class="logo" src="./assets/main_icon.png">
+  <img class="logo" src="">
   <button
     class='navbar-toggler'
     type='button'
@@ -19,21 +19,12 @@
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="vehicleDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Fahrzeugverwaltung
+            Personenverwaltung
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" routerLink="/createVehicle">Neues Fahrzeug</a>
-            <a class="dropdown-item" routerLink="/listVehicle">Fahrzeugliste</a>
+            <a class="dropdown-item" routerLink="/createPerson">Neue Person</a>
+            <a class="dropdown-item" routerLink="/listPerson">Personenliste</a>
           </div>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="routeDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Routen
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" routerLink="/listRoute">Routenliste</a>
-          </div>
-        </li>
       </ul>
     </div>
   </div>
