--- a/frontend/src/app/dashboard/dashboard.component.html
+++ b/frontend/src/app/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary">
-  <span>Fahrzeugverwaltung</span>
+  <span>Stammdatenverwaltung</span>
 </mat-toolbar>
 
 <div class="container mt-4">
