--- a/frontend/src/app/serviceProvider-create/serviceProvider-create.component.html
+++ b/frontend/src/app/serviceProvider-create/serviceProvider-create.component.html
@@ -9,7 +9,7 @@
         </div>
         <div class="mb-3">
           <label for="eMailAddress" class="form-label">E-Mail-Adresse:</label>
-          <input type="text" class="form-control" id="eMailAddress" [(ngModel)]="eMailAddress" name="eMailAddress" required>
+          <input type="text" class="form-control" id="eMailAddress" [(ngModel)]="emailAddress" name="eMailAddress" required>
         </div>
         <div class="mb-3">
           <label for="startPoint" class="form-label">Startpunkt:</label>
