--- a/frontend/src/app/serviceProvider-edit/serviceProvider-edit.component.html
+++ b/frontend/src/app/serviceProvider-edit/serviceProvider-edit.component.html
@@ -7,7 +7,7 @@
     </div>
     <div class="mb-3">
       <label for="eMailAddress" class="form-label">E-Mail-Adresse:</label>
-      <input type="text" class="form-control" id="eMailAddress" [(ngModel)]="serviceProvider.eMailAddress" name="eMailAddress" required>
+      <input type="text" class="form-control" id="eMailAddress" [(ngModel)]="serviceProvider.emailAddress" name="eMailAddress" required>
     </div>
     <div class="mb-3">
       <label for="startPoint" class="form-label">Startpunkt Adresse:</label>
