--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -33,6 +33,7 @@
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" routerLink="/createServiceProvider">Neuer Transportdienstleister</a>
             <a class="dropdown-item" routerLink="/listServiceProvider">Transportdienstleister Liste</a>
+            <a class="dropdown-item" routerLink="/listVehicle">Fahrzeug Liste</a>
           </div>
         </li>
       </ul>
